# paritet-test

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/core/: settings.py  urls.py
backend/gallery/: models.py  serializers.py
backend/gallery/migrations/: 0001_initial.py
backend/gallery/serializers/: image.py
backend/gallery/views/: image.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  tsconfig.app.json  tsconfig.base.json
frontend/src/: App.vue
frontend/src/assets/styles/: _variables.scss  main.scss
frontend/src/components/: ImageList.vue  UploadForm.vue
frontend/src/types/: Image.ts
